--- a/1.Foundation/lab1.ipynb
+++ b/1.Foundation/lab1.ipynb
@@ -13,8 +13,49 @@
    "execution_count": null,
    "id": "0a29fa13",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**Pain Point:** \n",
+      "\n",
+      "Despite the rapid growth of personalized and customized consumer products, several pain points persist in the current market:\n",
+      "\n",
+      "1. **Scalability and cost**: Large-scale production of customized items is often economically unviable, as it requires significant upfront costs and infrastructure investment.\n",
+      "2. **Design quality variability**: Currently, customized designs might lack consistency, coherence, or aesthetic appeal due to human error, miscommunication, or subjective taste.\n",
+      "3. **Inequitable distribution**: Existing platforms may prioritize high-demand or mass-market designs over more niche or unique requests, limiting creative expression for users.\n",
+      "4. **Lack of control over production**: Users often have no direct say in the production process, leading to potential defects, misprints, or unmet expectations.\n",
+      "5. **Intellectual property and ownership**: The complexity of IP rights, licenses, and ownership in AI-generated creative works requires clarification, protection, and transparency.\n",
+      "6. **Limited sustainability**: Mass-produced, customized items may lead to a larger carbon footprint and waste, as the demand for new, individualized products drives a cycle of consumption.\n",
+      "\n",
+      "**Ripe for an Agentic Solution:** \n",
+      "\n",
+      "The proposed domain of AI-driven, personalized micro-novelty item design and production addresses these pain points by leveraging Agentic AI capabilities:\n",
+      "\n",
+      "1. **Scalability and cost**: AI can optimize production processes, reduce waste, and predict demand for customized items, making them more economically viable.\n",
+      "2. **Design quality consistency**: AI can guarantee consistent, high-quality designs by incorporating expertise from human designers, artists, and critics.\n",
+      "3. **Inclusivity and distribution**: AI can analyze user preferences, provide equitable access to designs, and enable global, on-demand production, eliminating geographical and linguistic barriers.\n",
+      "4. **Transparency in production**: AI can enable real-time monitoring of production, allowing users to track their item's journey, detect potential issues, and provide feedback.\n",
+      "5. **Clear IP and ownership**: AI can ensure the accurate attribution of creative rights and intellectual property ownership through blockchain-based systems.\n",
+      "6. **Sustainable production**: AI can analyze material usage, waste reduction, and environmental impact, guiding the development of eco-friendly production processes and responsible consumption practices.\n",
+      "\n",
+      "By leveraging Agentic AI capabilities and expertise, the proposed startup can address the existing pain points in the market and provide a unique, innovative solution for customers seeking customized and sustainable micro-novelty items.\n"
+     ]
+    }
+   ],
    "source": [
+    "from openai import OpenAI\n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv(override=True)\n",
+    "\n",
+    "GROQ_BASE_URL = \"GROQ_BASE\"\n",
+    "groq_api_key = os.getenv(\"GROQ_API\")\n",
+    "\n",
+    "groq = OpenAI(api_key=groq_api_key, base_url=GROQ_BASE_URL)\n",
+    "\n",
     "prompt = \"Give me such an Domain or  idea for bussiness area that might be so new for an Agentic AI startup that is never ever exploited or people never worked on that part \"\n",
     "response = groq.chat.completions.create(\n",
     "    model=\"llama-3.1-8b-instant\",\n",
